Fix incorrect tab labels after reordering

BUG: 282017
FIXED-IN: 4.7.4
REVIEW: 102628